rule_map update

--- a/apps/landing/src/app/docs/contributing/page.mdx
+++ b/apps/landing/src/app/docs/contributing/page.mdx
@@ -15,7 +15,7 @@ Braillify는 모든 오픈소스 기여를 환영합니다.
 
 - **Rust**
 - **Python** 3.9 이상
-- **Node.js** 
+- **Node.js(22이상)** 
 - **pnpm** (Node.js 패키지 매니저)
 - **uv** (Python 패키지 매니저)
 - **Git**
@@ -140,4 +140,4 @@ git commit -m "Add feature"
 git push origin feature/my-contribution
 ```
 
-### 5. Pull Request 생성
+### 6. Pull Request 생성
